# multi-doc-chat-advanced-rag-pilot_1

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  test.py
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/logger/: __init__.py  cutom_logger.py
multi_doc_chat/model/: models.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebook/: Evaluations.ipynb  RAG.ipynb  experiments.ipynb
static/: styles.css
templates/: index.html
test/: conftest.py
test/integration/: test_chat_route.py  test_upload_route.py
test/unit/: test_data_ingestion.py  test_retrieval.py
